Week2-Assignment1 complete

--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ border-bottom-color: #cccccc;
     text-align: center;
     line-height: 75px;
     margin-left: 225px;
+    padding-top: 10px;
 }
 
 .info {
