--- a/style.css
+++ b/style.css
@@ -382,10 +382,82 @@ p1{
     }
 }
 
-@media only screen and (max-width: 375px){
-    .name{
+@media only screen and (max-width: 667px){
+    .navbar{
+        height:auto;
+    }
+    h1{
         
-        margin-left:140px;
+        margin-bottom: 10px;
+    }
+    .navbar-toggler-icon{
+        margin-top: 5px;
+        margin-bottom:10px;
+        margin-right: 300px;
+        height:30px;
+    }
+    p {
+        font-size: 12px;
+        line-height: 11px;
+    }
+    a {
+        font-size: 14px;
+    }
+    .img-fluid{
+        height: 180px;
+        width:300px;
+    }
+    .img1{
+        float:left;
+        margin-top: 1px;
+        height:250px;
+        width:300px;
+        margin-bottom:25px;
+        
+    }
+    .col-sm{
+        height:50px;
+        width:20px;
+    }
+    h1{
+        font-size: 15px;
+        padding:3px;
+        
+    }
+    h3{
+        color:white;
+        font-family: Georgia, 'Times New Roman', Times, serif;
+        font-size: 15px;
+        text-align: center;
+        line-height: 15px;
+        
+    }
+    .container1{
+        height:150px;
+        margin-left:10px;
+        margin-bottom: 15px;
+        margin-top:15px;
+    }
+    .container2{
+        height:200px;
+        margin-left:10px;
+        margin-bottom: 15px;
+        margin-top:15px;
+    }
+    #border{
+        height:35px;
+        width:100%;
+    }
+    .name{
+        font-size: 15px;
+        margin-left:50px;
+        height:35px;
+        width:200px;
+    }
+
+    #footer{
+        height:100px;
+        text-align: left;
     }
 
 }
