--- a/style.css
+++ b/style.css
@@ -90,12 +90,18 @@ border-bottom-color: #4f80e0;
 
 }
 
-h1 {
+h3 {
     color: #ffffff;
     font-family: "Georgia";
     margin-top: 0;
     text-align: center;
+}
 
+h4{
+    color:white;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 18px;
+    text-align: center;
 
 }
 
@@ -321,6 +327,10 @@ p1{
    
 }
 
+@media only screen and (max-width:980px){
+
+}
+
 @media only screen and (max-width:768px){
 
    .navbar-toggler-icon{
@@ -334,9 +344,23 @@ p1{
         font-size: 24px;
         line-height: 21px;
     }
-    h1 {
-        margin-bottom: 130px
+    h3{
+        color:white;
+        font-family: Georgia, 'Times New Roman', Times, serif;
+        font-size: 18px;
+        text-align: center;
+        line-height: 15px;
+        
     }
+
+    h4{
+        color:white;
+        font-family: Georgia, 'Times New Roman', Times, serif;
+        font-size: 18px;
+        text-align: center;
+
+    }
+
     .img1{
         margin-top: 80px;
         height:260px;
@@ -352,13 +376,13 @@ p1{
     }
 
     .sb2{
-        width:640px;
+        width:600px;
     }
     
 
     #mainlang{
-        height:320px;
-        width:700px;
+        height:260px;
+        width:640px;
         margin-top: 40px;
         margin-left: 1px;
         
@@ -380,32 +404,88 @@ p1{
     #fab3{
         font-size:150px;
     }
+
+    .html{
+        height:80px;
+        width:80px;
+    }
+
+    .css{
+        float:left;
+        height:80px;
+        width:80px;
+        /* margin-top:10px; */
+        margin-left:26px;
+    }
+
+    .jquery{
+        float:left;
+        height:80px;
+        width:80px;
+        margin-top:1px;
+        margin-left:230px;
+    }
+
+    .js{
+        float:left;
+        height:80px;
+        width:80px;
+        margin-top:1px;
+        margin-left:3px;
+    }
+
+    .firedb{
+        float:left;
+        height:80px;
+        width:80px;
+        margin-top:1px;
+        margin-left:36px;
+    }
+
+    .api{
+        float:left;
+        height:80px;
+        width:80px;
+        margin-top:1px;
+        margin-left:160px;
+    }
+
+    .exp{
+        float:left;
+        height:80px;
+        width:80px;
+        margin-top:1px;
+        margin-left:200px;
+    }
+
+    #footer{
+        height:auto;
+        text-align: center;
+
+    }
 }
 
 @media only screen and (max-width: 667px){
     .navbar{
         height:auto;
     }
-    h1{
-        
-        margin-bottom: 10px;
-    }
+    
     .navbar-toggler-icon{
         margin-top: 5px;
         margin-bottom:10px;
         margin-right: 300px;
-        height:30px;
+        height:20px;
     }
     p {
-        font-size: 12px;
-        line-height: 11px;
+        font-size: 15px;
+        line-height: 12px;
     }
     a {
         font-size: 14px;
     }
     .img-fluid{
         height: 180px;
-        width:300px;
+        width:340px;
     }
     .img1{
         float:left;
@@ -415,23 +495,29 @@ p1{
         margin-bottom:25px;
         
     }
-    .col-sm{
-        height:50px;
-        width:20px;
-    }
+    
     h1{
-        font-size: 15px;
+        font-size: 22px;
         padding:3px;
+        margin-bottom:10px;
         
     }
     h3{
         color:white;
         font-family: Georgia, 'Times New Roman', Times, serif;
-        font-size: 15px;
+        font-size: 18px;
         text-align: center;
         line-height: 15px;
         
     }
+    h4{
+        color:white;
+        font-family: Georgia, 'Times New Roman', Times, serif;
+        font-size: 18px;
+        text-align: center;
+
+    }
+ 
     .container1{
         height:150px;
         margin-left:10px;
@@ -449,99 +535,126 @@ p1{
         width:100%;
     }
     .name{
-        font-size: 15px;
+        
+        text-align: center;
+        font-size: 28px;
         margin-left:50px;
         height:35px;
         width:200px;
     }
+     .cont{
+         margin-right: 100px;
+         margin-top:-20px;
+     }
+     .sb {
+        width: 250px;
+     }
+    
 
+     #fab1{
+         margin-left:140px;
+         font-size: 52px;
+         margin-top:-14px;
+     }
+     .row{
+         float:left;
+     }
+     #fab2{
+        font-size: 52px;
+        float:right;
+        margin-top:-55px;
+        margin-left:-55px;
+        margin-right:30px;
+    }
+
+    #fab3{
+        font-size: 52px;
+        float:left;
+        margin-top:-55px;
+        margin-left: 30px;
+    }
+   
+    .col-sm-1{
+        height:auto;
+        width:auto;
+    }
     #footer{
-        height:100px;
+        height:auto;
         text-align: left;
+
     }
 
     #main2{
         margin-top: 20px;
-        height:280px;
+        height:200px;
         width: 320px;
+    }
+        
+    p1{
+        font-size: 15px;
+    }
+
+    .sb2{
+        width:300px;
     }
 
     #mainlang{
-        height:250px;
+        height:560px;
         width: 350px;
-        margin-top:280px;
+        margin-top:30px;
     }
 
     .html{
-        height:50px;
-        width:50px;
+        height:100px;
+        width:100px;
     }
 
     .css{
         float:left;
-        height:50px;
-        width:50px;
-        margin-top:-50px;
-        margin-left:52px;
+        height:100px;
+        width:100px;
+        margin-top:-100px;
+        margin-left:110px;
     }
 
     .jquery{
         float:left;
-        height:50px;
-        width:50px;
-        margin-top:-50px;
-        margin-left:105px;
+        height:100px;
+        width:100px;
+        margin-top:-100px;
+        margin-left:220px;
     }
 
     .js{
         float:left;
-        height:50px;
-        width:50px;
-        margin-top:-50px;
-        margin-left:160px;
+        height:100px;
+        width:100px;
+        margin-top:5px;
+        margin-left:1px;
     }
 
     .firedb{
         float:left;
-        height:50px;
-        width:50px;
-        margin-top:-50px;
-        margin-left:215px;
+        height:100px;
+        width:100px;
+        margin-top:-100px;
+        margin-left:110px;
     }
 
     .api{
         float:left;
         height:50px;
         width:50px;
-        margin-top:-50px;
-        margin-left:270px;
+        margin-top:-70px;
+        margin-left:240px;
     }
 
     .exp{
         float:left;
-        height:50px;
-        width:50px;
+        height:100px;
+        width:100px;
         margin-top:-50px;
         margin-left:340px;
     }
-
-    .html{
-        height:50px;
-        width:50px;
-    }
-
-    .html{
-        height:50px;
-        width:50px;
-    }
-
-    .html{
-        height:50px;
-        width:50px;
-    }
-
-    .html{
-        height:50px;
-        width:50px;
-    }
+   
 }
